from .text_field import TextField


class MultilineField(TextField):
    """Textarea-like field; inherits TextField behavior (value-based)."""
    pass

